Fixing the padding on safari

--- a/style.css
+++ b/style.css
@@ -533,10 +533,12 @@ section button{
     width: 100%;
     border: none;
     padding: .8rem;
+    -webkit-padding: .8rem;
     outline: none;
     border-radius: 2px;
     font-family: 'Poppins', sans-serif;
     font-size: .95rem;
+    -webkit-appearance: initial;
 }
 .contact-form textarea {
     resize: none;
@@ -553,8 +555,9 @@ section button{
     cursor: pointer;
     color: white;
     padding: .8rem;
-    -webkit-padding: .8rem;
     background-color: var(--secondary-color);
+    -webkit-padding: .8rem;
+    -webkit-appearance: initial;
 }
 #bot-field {
     display: none;
